--- a/MaqCenter.csproj
+++ b/MaqCenter.csproj
@@ -17,4 +17,11 @@
     <None Remove="Views\NovaPasta2\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Agendamento\GerenciamentoAgendamentoUsuario.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
